* Fixed URL generation to utilize the URI class.  This ensures that paths are encoded correctly.
git-svn-id: https://atmos-java.googlecode.com/svn/trunk/@14 f9042120-e4f6-11de-b362-3513cf04e977